@@ -25,6 +25,7 @@
   "item.chilibulletweapons.half_chili_meat_sandwich": "Half-sized Chili Meat Sandwich",
   "item.chilibulletweapons.half_chili_potato_sandwich": "Half-sized Chili Potato Sandwich",
   "item.chilibulletweapons.machine_gun": "Chili Bullet Machine Gun",
+  "item.chilibulletweapons.pasta_oil_and_chili": "Pasta Olio e Peperoncino",
   "itemGroup.chilibulletweapons.main": "Chili Bullet Weapons",
   "subtitles.item.chilibulletweapons.gun.action_close": "Chili Bullet Gun loads",
   "subtitles.item.chilibulletweapons.gun.shoot": "Chili Bullet Gun fires"
